make-a-wish-salesforce/src/objects/Referral_Form_Alerts__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom settings to control conditional alert messages and DV and referral form suppression.</description>
    <fields>
        <fullName>DV_Form_Warning_Message__c</fullName>
        <description>Text for the DV Form Warning Message</description>
        <label>DV Form Warning Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deactivate_DV_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If True deactivates the DV Form and displays the deactivated message.</description>
        <label>Deactivate DV Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deactivate_MP_HTF_Search__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Deactivates the MP HTF Search fields</description>
        <inlineHelpText>Deactivates the MP HTF Search fields</inlineHelpText>
        <label>Deactivate MP HTF Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deactivate_Referral_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If 'True' the Referral From will not function and the 'Deactivated Message' will be displayed in its place.</description>
        <label>Deactivate Referral Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deactivated_DV_Form_Message__c</fullName>
        <description>Text for the deactivated DV Form message</description>
        <label>Deactivated DV Form Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deactivated_Message__c</fullName>
        <description>Message displayed when the referral form is deactivated.</description>
        <label>Deactivated Referral Form Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_DV_Form_Warning_Message__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When TRUE display the DV Form Warning Message</description>
        <label>Display DV Form Warning Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Warning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If 'True' the Warning Message will be displayed on the form.</description>
        <label>Display Referral Form Warning Msg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Warning_Message__c</fullName>
        <description>Warning message displayed at the top of the referral form.</description>
        <label>Referral Form Warning Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Referral &amp; DV Form Alerts</label>
</CustomObject>